# standart-library-for-me

./: .gitignore  CMakeLists.txt  README.md
include/stda/algoritm/: algoritm.hpp  algoritm.tpp
include/stda/events/: events.hpp
include/stda/grafos/: grafos.hpp
include/stda/iterator/: iterator.hpp  iterator.tpp
include/stda/nodes/: nodes.hpp  nodes.tpp
include/stda/numbers/: numbers.hpp  typedefs.hpp
include/stda/sstrings/: converter.hpp  sstrings.hpp  stringbuffer.hpp
include/stda/standart/: numbers.hpp  utilitys.hpp
include/stda/system/exceptions/: exceptions.hpp
include/stda/system/files/: files.hpp  filesystem.hpp
include/stda/system/files/directory/: directory.hpp
include/stda/system/files/exception/: exception.hpp
include/stda/system/files/fstream/: fstream.hpp
include/stda/system/files/url/: url.hpp
include/stda/system/logs/: logs.hpp
include/stda/system/memory/: memory.hpp
include/stda/system/terminal/: terminal.hpp
include/stda/system/time/: time.hpp
include/stda/trails/: trails.hpp  trails.tpp
include/stda/typedef/: typedef.hpp
include/stda/utilitys/: utilitys.hpp
lib/: converter.cpp  directory.cpp  exception.cpp  files.cpp  fstream.cpp  logs.cpp  memory.cpp  numbers.cpp  sstrings.cpp  stringbuffer.cpp  stringbuffer_old.cpp  terminal.cpp  time.cpp  txt.txt  url.cpp
